grammer/ExprParser.java
// Generated from Expr.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, CONST=2, TYPE=3, VARIABLE=4, PROCEDURE=5, LIST=6, FROM=7, RECORD=8, 
		BY_VALUE=9, BY_REFERENCE=10, IF=11, THEN=12, ELSE=13, FOR=14, TO=15, STEP=16, 
		WHILE=17, CONTINUE=18, REPEAT=19, UNTIL=20, READ=21, PRINT=22, TRUE=23, 
		FALSE=24, DT_INTEGER=25, DT_REAL=26, DT_LOGICAL=27, DT_CHAR=28, DT_STRING=29, 
		L_PAREN=30, R_PAREN=31, L_SQUARE_BRACKET=32, R_SQUARE_BRACKET=33, L_CURLY_BRACE=34, 
		R_CURLY_BRACE=35, COMMA=36, SEMICOLON=37, COLON=38, DOT=39, EQUALS=40, 
		PLUS=41, MINUS=42, MULT=43, DIV=44, INT_DIV=45, MOD=46, POWER=47, AND=48, 
		OR=49, NOT=50, EQUALS_OP=51, NOT_EQUALS_OP=52, GTE=53, LTE=54, GT=55, 
		LT=56, ID=57, REAL_NUMBER=58, INTEGER=59, STRING_LITERAL=60, CHAR_LITERAL=61, 
		WS=62;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_definitions_part = 2, RULE_constants_definition = 3, 
		RULE_constant_def = 4, RULE_types_definition = 5, RULE_type_def = 6, RULE_variables_definition = 7, 
		RULE_variable_def = 8, RULE_procedures_definition = 9, RULE_procedure_def = 10, 
		RULE_composite_type = 11, RULE_list_type = 12, RULE_record_type = 13, 
		RULE_fields_list = 14, RULE_field_def = 15, RULE_variables_group = 16, 
		RULE_procedure_header = 17, RULE_procedure_block = 18, RULE_formal_params_list = 19, 
		RULE_param_def = 20, RULE_data_type = 21, RULE_instructions_list = 22, 
		RULE_instruction = 23, RULE_assignment_statement = 24, RULE_input_statement = 25, 
		RULE_output_statement = 26, RULE_call_statement = 27, RULE_print_list = 28, 
		RULE_print_item = 29, RULE_actual_params_list = 30, RULE_actual_param = 31, 
		RULE_conditional_statement = 32, RULE_condition = 33, RULE_loop_statement = 34, 
		RULE_for_loop_statement = 35, RULE_iteration_range = 36, RULE_while_loop_statement = 37, 
		RULE_repeat_until_statement = 38, RULE_expression = 39, RULE_simple_expression = 40, 
		RULE_term = 41, RULE_factor = 42, RULE_variable_access = 43, RULE_selector = 44, 
		RULE_indexed_selector = 45, RULE_field_selector = 46, RULE_constant_value = 47, 
		RULE_numeric_value = 48, RULE_literal_value = 49, RULE_logical_value = 50, 
		RULE_relational_op = 51, RULE_sign = 52, RULE_add_op = 53, RULE_mul_op = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "definitions_part", "constants_definition", "constant_def", 
			"types_definition", "type_def", "variables_definition", "variable_def", 
			"procedures_definition", "procedure_def", "composite_type", "list_type", 
			"record_type", "fields_list", "field_def", "variables_group", "procedure_header", 
			"procedure_block", "formal_params_list", "param_def", "data_type", "instructions_list", 
			"instruction", "assignment_statement", "input_statement", "output_statement", 
			"call_statement", "print_list", "print_item", "actual_params_list", "actual_param", 
			"conditional_statement", "condition", "loop_statement", "for_loop_statement", 
			"iteration_range", "while_loop_statement", "repeat_until_statement", 
			"expression", "simple_expression", "term", "factor", "variable_access", 
			"selector", "indexed_selector", "field_selector", "constant_value", "numeric_value", 
			"literal_value", "logical_value", "relational_op", "sign", "add_op", 
			"mul_op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\u0637\u00A8\u0637\u00B1\u0638\u2020\u0637\u00A7\u0638\u2026\u0637\u00AC'", 
			"'\u0637\u00AB\u0637\u00A7\u0637\u00A8\u0637\u06BE'", "'\u0638\u2020\u0638\u02C6\u0637\u00B9'", 
			"'\u0638\u2026\u0637\u06BE\u0637\u061B\u0638\u0679\u0637\u00B1'", "'\u0637\u00A7\u0637\u00AC\u0637\u00B1\u0637\u00A7\u0637\u060C'", 
			"'\u0638\u201A\u0637\u00A7\u0637\u00A6\u0638\u2026\u0637\u00A9'", "'\u0638\u2026\u0638\u2020'", 
			"'\u0637\u00B3\u0637\u00AC\u0638\u201E'", "'\u0637\u00A8\u0637\u00A7\u0638\u201E\u0638\u201A\u0638\u0679\u0638\u2026\u0637\u00A9'", 
			"'\u0637\u00A8\u0637\u00A7\u0638\u201E\u0638\u2026\u0637\u00B1\u0637\u00AC\u0637\u00B9'", 
			"'\u0637\u00A7\u0637\u00B0\u0637\u00A7'", "'\u0638\u067E\u0637\u00A7\u0638\u2020'", 
			"'\u0638\u02C6\u0637\u00A7\u0638\u201E\u0637\u00A7'", "'\u0638\u0192\u0637\u00B1\u0637\u00B1'", 
			"'\u0637\u00A7\u0638\u201E\u0638\u2030'", "'\u0637\u00A7\u0637\u00B6\u0638\u067E'", 
			"'\u0637\u00B7\u0637\u00A7\u0638\u201E\u0638\u2026\u0637\u00A7'", "'\u0637\u00A7\u0637\u00B3\u0637\u06BE\u0638\u2026\u0637\u00B1'", 
			"'\u0637\u00A7\u0637\u00B9\u0637\u00AF'", "'\u0637\u00AD\u0637\u06BE\u0638\u2030'", 
			"'\u0637\u00A7\u0638\u201A\u0637\u00B1\u0637\u00A7'", "'\u0637\u00A7\u0637\u00B7\u0637\u00A8\u0637\u00B9'", 
			"'\u0637\u00B5\u0637\u00AD'", "'\u0637\u00AE\u0637\u00B7\u0637\u00A3'", 
			"'\u0637\u00B5\u0637\u00AD\u0638\u0679\u0637\u00AD'", "'\u0637\u00AD\u0638\u201A\u0638\u0679\u0638\u201A\u0638\u0679'", 
			"'\u0638\u2026\u0638\u2020\u0637\u00B7\u0638\u201A\u0638\u0679'", "'\u0637\u00AD\u0637\u00B1\u0638\u067E\u0638\u0679'", 
			"'\u0637\u00AE\u0638\u0679\u0637\u00B7_\u0637\u00B1\u0638\u2026\u0637\u00B2\u0638\u0679'", 
			"'('", "')'", "'['", "']'", "'{'", "'}'", "'\u0637\u0152'", "'\u0637\u203A'", 
			"':'", "'.'", "'='", "'+'", "'-'", "'*'", "'/'", "'\\'", "'%'", "'^'", 
			"'&&'", "'||'", "'!'", "'=='", "'=!'", "'>='", "'<='", "'>'", "'<'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "CONST", "TYPE", "VARIABLE", "PROCEDURE", "LIST", "FROM", 
			"RECORD", "BY_VALUE", "BY_REFERENCE", "IF", "THEN", "ELSE", "FOR", "TO", 
			"STEP", "WHILE", "CONTINUE", "REPEAT", "UNTIL", "READ", "PRINT", "TRUE", 
			"FALSE", "DT_INTEGER", "DT_REAL", "DT_LOGICAL", "DT_CHAR", "DT_STRING", 
			"L_PAREN", "R_PAREN", "L_SQUARE_BRACKET", "R_SQUARE_BRACKET", "L_CURLY_BRACE", 
			"R_CURLY_BRACE", "COMMA", "SEMICOLON", "COLON", "DOT", "EQUALS", "PLUS", 
			"MINUS", "MULT", "DIV", "INT_DIV", "MOD", "POWER", "AND", "OR", "NOT", 
			"EQUALS_OP", "NOT_EQUALS_OP", "GTE", "LTE", "GT", "LT", "ID", "REAL_NUMBER", 
			"INTEGER", "STRING_LITERAL", "CHAR_LITERAL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(ExprParser.PROGRAM, 0); }
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(ExprParser.SEMICOLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(ExprParser.DOT, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(PROGRAM);
			setState(111);
			match(ID);
			setState(112);
			match(SEMICOLON);
			setState(113);
			block();
			setState(114);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public Instructions_listContext instructions_list() {
			return getRuleContext(Instructions_listContext.class,0);
		}
		public Definitions_partContext definitions_part() {
			return getRuleContext(Definitions_partContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(116);
				definitions_part();
				}
				break;
			}
			setState(119);
			instructions_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definitions_partContext extends ParserRuleContext {
		public Constants_definitionContext constants_definition() {
			return getRuleContext(Constants_definitionContext.class,0);
		}
		public Types_definitionContext types_definition() {
			return getRuleContext(Types_definitionContext.class,0);
		}
		public Variables_definitionContext variables_definition() {
			return getRuleContext(Variables_definitionContext.class,0);
		}
		public Procedures_definitionContext procedures_definition() {
			return getRuleContext(Procedures_definitionContext.class,0);
		}
		public Definitions_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterDefinitions_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitDefinitions_part(this);
		}
	}

	public final Definitions_partContext definitions_part() throws RecognitionException {
		Definitions_partContext _localctx = new Definitions_partContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definitions_part);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(121);
				constants_definition();
				}
			}

			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(124);
				types_definition();
				}
			}

			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIABLE) {
				{
				setState(127);
				variables_definition();
				}
			}

			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROCEDURE) {
				{
				setState(130);
				procedures_definition();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constants_definitionContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(ExprParser.CONST, 0); }
		public List<Constant_defContext> constant_def() {
			return getRuleContexts(Constant_defContext.class);
		}
		public Constant_defContext constant_def(int i) {
			return getRuleContext(Constant_defContext.class,i);
		}
		public Constants_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constants_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterConstants_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitConstants_definition(this);
		}
	}

	public final Constants_definitionContext constants_definition() throws RecognitionException {
		Constants_definitionContext _localctx = new Constants_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constants_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(CONST);
			setState(135); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(134);
				constant_def();
				}
				}
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constant_defContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public TerminalNode EQUALS() { return getToken(ExprParser.EQUALS, 0); }
		public Constant_valueContext constant_value() {
			return getRuleContext(Constant_valueContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ExprParser.SEMICOLON, 0); }
		public Constant_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterConstant_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitConstant_def(this);
		}
	}

	public final Constant_defContext constant_def() throws RecognitionException {
		Constant_defContext _localctx = new Constant_defContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constant_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(ID);
			setState(140);
			match(EQUALS);
			setState(141);
			constant_value();
			setState(142);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Types_definitionContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(ExprParser.TYPE, 0); }
		public List<Type_defContext> type_def() {
			return getRuleContexts(Type_defContext.class);
		}
		public Type_defContext type_def(int i) {
			return getRuleContext(Type_defContext.class,i);
		}
		public Types_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_types_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterTypes_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitTypes_definition(this);
		}
	}

	public final Types_definitionContext types_definition() throws RecognitionException {
		Types_definitionContext _localctx = new Types_definitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_types_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(TYPE);
			setState(146); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(145);
				type_def();
				}
				}
				setState(148); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_defContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public TerminalNode EQUALS() { return getToken(ExprParser.EQUALS, 0); }
		public Composite_typeContext composite_type() {
			return getRuleContext(Composite_typeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ExprParser.SEMICOLON, 0); }
		public Type_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterType_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitType_def(this);
		}
	}

	public final Type_defContext type_def() throws RecognitionException {
		Type_defContext _localctx = new Type_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(ID);
			setState(151);
			match(EQUALS);
			setState(152);
			composite_type();
			setState(153);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variables_definitionContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(ExprParser.VARIABLE, 0); }
		public List<Variable_defContext> variable_def() {
			return getRuleContexts(Variable_defContext.class);
		}
		public Variable_defContext variable_def(int i) {
			return getRuleContext(Variable_defContext.class,i);
		}
		public Variables_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterVariables_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitVariables_definition(this);
		}
	}

	public final Variables_definitionContext variables_definition() throws RecognitionException {
		Variables_definitionContext _localctx = new Variables_definitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variables_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(VARIABLE);
			setState(157); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(156);
				variable_def();
				}
				}
				setState(159); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_defContext extends ParserRuleContext {
		public Variables_groupContext variables_group() {
			return getRuleContext(Variables_groupContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ExprParser.SEMICOLON, 0); }
		public Variable_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterVariable_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitVariable_def(this);
		}
	}

	public final Variable_defContext variable_def() throws RecognitionException {
		Variable_defContext _localctx = new Variable_defContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variable_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			variables_group();
			setState(162);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Procedures_definitionContext extends ParserRuleContext {
		public List<Procedure_defContext> procedure_def() {
			return getRuleContexts(Procedure_defContext.class);
		}
		public Procedure_defContext procedure_def(int i) {
			return getRuleContext(Procedure_defContext.class,i);
		}
		public Procedures_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedures_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterProcedures_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitProcedures_definition(this);
		}
	}

	public final Procedures_definitionContext procedures_definition() throws RecognitionException {
		Procedures_definitionContext _localctx = new Procedures_definitionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_procedures_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(164);
				procedure_def();
				}
				}
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PROCEDURE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Procedure_defContext extends ParserRuleContext {
		public Procedure_headerContext procedure_header() {
			return getRuleContext(Procedure_headerContext.class,0);
		}
		public Procedure_blockContext procedure_block() {
			return getRuleContext(Procedure_blockContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ExprParser.SEMICOLON, 0); }
		public Procedure_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterProcedure_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitProcedure_def(this);
		}
	}

	public final Procedure_defContext procedure_def() throws RecognitionException {
		Procedure_defContext _localctx = new Procedure_defContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_procedure_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			procedure_header();
			setState(170);
			procedure_block();
			setState(171);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
